docs(perf): record pipeline validation result